# KuroYomi

./: .gitignore
JMDict/: index.json
Jintendex/: styles.css
KuroYomi-UI/: package-lock.json  package.json
KuroYomi-UI/json-to-parquet/: .gitignore  example.json  main.py  new_term_bank_212.jsonl  pyproject.toml
KuroYomi-UI/pre-tauri-rust/: Cargo.toml
KuroYomi-UI/pre-tauri-rust/src/: main  main.rs
KuroYomi-UI/src-tauri/: Cargo.toml  tauri.conf.json
KuroYomi-UI/src-tauri/src/: commands.rs  lib.rs  main.rs
KuroYomi-UI/src-tauri/src/dictionary/: loader.rs
KuroYomi-UI/src/routes/: +page.svelte
OCR-Stuff/: main.py
