[project]
name = "json-to-parquet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.44",
]

[tool.uv.workspace]
members = [
    "testluis",
]
